# MiniRender

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01_colorful_renderer/: CMakeLists.txt  main.cpp
examples/02_imgui_sdl3gpu/: CMakeLists.txt  main.cpp
examples/03_triangle/: CMakeLists.txt  main.cpp
examples/03_triangle/Utils/: vulkan_util.cpp  vulkan_util.hpp
examples/03_triangle/shaders/: compile.sh
examples/04_triangle_spin/: CMakeLists.txt  main.cpp
examples/04_triangle_spin/Utils/: vulkan_util.cpp  vulkan_util.hpp
examples/04_triangle_spin/shaders/: compile.sh  vert.glsl  vert.spv
examples/cpp_feature_examples/: CMakeLists.txt
examples/cpp_feature_examples/CRTP/: CMakeLists.txt  main.cpp
libs/imgui/: CMakeLists.txt
src/: main.cpp
